tests/sema/fail/v5_fail_itoa_removed.ep
# COMPILE_FAIL: unknown function itoa
fun main(): void {
    let s = itoa(1)
}
